--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -2,6 +2,6 @@
     <div class="navbar-brand">Task Manager Pro</div>
 
     <ul class="navbar-links">
-        <li><a [routerLink]="['/dashboard']" routerLinkActive="'active'">DashBoard</a></li>
+        <li><a [routerLink]="['/dashboard']" routerLinkActive="active">DashBoard</a></li>
     </ul>
 </nav>
